<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/helpadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/help_ic_add"
        android:text="@string/help_add"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorPurple"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/helpedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_edit"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@mipmap/ic_edit"
        android:textColor="@color/colorPurple"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/helpdelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/helpdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/helpadd"
        android:drawableLeft="@mipmap/ic_delete"

        android:text="@string/help_delete"
        android:textColor="@color/colorPurple" />

</RelativeLayout>
